<resources>
    <string name="about_dreamnote">about DreamNote</string>
    <string name="item_thumbnail_desc">thumbnail desc</string>
    <string name="item_tagicon_desc">tagicon desc</string>
    <string name="item_tagtext_desc">tagtext desc</string>
    <string name="item_category_desc">category line desc</string>
    <string name="hello">Hello World, DreamNoteActivity!</string>
    <string name="app_name">DreamNote</string>
    <string name="search_hint">Search DreamNote</string>
    <string name="splash_raindrop_thanks_msg_head">"Some of the icons used in the application</string>
    <string name="splash_raindrop_thanks_msg_middle">icon by raindropmemory</string>
    <string name="splash_raindrop_thanks_msg_foot">"Thank you for permission to use, thank you."</string>
    <string name="raindrop_deviantart_url"><a href="http://raindropmemory.deviantart.com/">http://raindropmemory.deviantart.com</a></string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="itemtype_memo">Memo</string>
    <string name="itemtype_photomemo">Image Memo</string>
    <string name="itemtype_todo">Completed ToDo</string>
    <string name="itemtype_todonew">Incomplete ToDo</string>
    <string name="itemtype_clip">Web clip</string>
    <string name="item_delete_msg_foot">\nwas deleted</string>
    <string name="postever_xmlns_not_supported">HTML with XML name space is not supported. Abort the transfer to evernote</string>
    <string name="postever_failed_create_note">Failed to create a note</string>
    <string name="postever_new_note_successfully">New note created successfully! transferred to evernote</string>
    <string name="error_required">Are required. Please enter.</string>
    <string name="viewer_title">Note</string>
    <string name="preference_title">setting</string>
    <string name="taglist_title">Tags</string>
    <string name="post_evernote">Transfer to Evernote</string>
    <string name="preference_enconfig_log_in">Sign in to Evernote</string>
    <string name="preference_enconfig_log_out">Log out of Evernote</string>
    <string name="preference_enconfig_browserhint">You may not be able to sign in a standard browser</string>
    <string name="preference_enconfig_description">To transfer a Web Clip to Evernote, \nis necessary to set the account ID and password of Evernote.</string>
    <string name="home_viewer_title">View Notes</string>
    <string name="home_clip_title">Web clip</string>
    <string name="editclip_title">Edit Web Clip</string>
    <string name="addclip_title">Add Web Clip</string>
    <string name="cliphelp_title">Web Clip Help</string>
    <string name="addmemo_title">Add Memo</string>
    <string name="editmemo_title">Edit Note</string>
    <string name="addphoto_title">Add Image Memo</string>
    <string name="editphoto_title">Edit Image Memo</string>
    <string name="addtodo_title">Add ToDo</string>
    <string name="edittodo_title">Edit ToDo</string>
    <string name="hint_todo">ToDo</string>
    <string name="hint_title">title</string>
    <string name="hint_content">text</string>
    <string name="hint_description">remarks</string>
    <string name="hint_tags">tag</string>
    <string name="seltagbutton_description">Select a Tag</string>
    <string name="savebutton_description">save</string>
    <string name="cancelbutton_description">cancel</string>
	<string name="updatebutton_description">update</string>
    <string name="prefs_savebutton_description">save settings</string>
    <string name="returnbutton_description">return</string>
    <string name="delete_button_description">del</string>
    <string name="searchbutton_description">search</string>
    <string name="searchclearbutton_description">clear search</string>
    <string name="tagselector_description">Select a tag</string>
    <string name="browserbutton_description">browser</string>
    <string name="sharebutton_description">share</string>
    <string name="webtext_sharebutton_description">Share a Web Text</string>
    <string name="editbutton_description">edit</string>
    <string name="fullscreenbutton_description">Maximize</string>
    <string name="picviewerbutton_description">viewer</string>
    <string name="viewswitchbutton_description">swicth view</string>
    <string name="completebutton_description">complete</string>
    <string name="incompletebutton_description">incomplete</string>
    <string name="seldatebutton_description">Select Date</string>
    <string name="non_description">no remarks</string>
    <string name="non_tags">no tags</string>
    <string name="non_limit">no deadline</string>
    <string name="delete_cancelbutton_description">Cancel remove</string>
    <string name="clip_delete_confirm_msg_haed">Have saved data on a Web page「</string>
    <string name="photo_delete_confirm_msg_haed">Image has been saved「</string>
    <string name="item_delete_confirm_msg">Are you sure?</string>
    <string name="item_delete_confirm_msg_foot">」Do you want to delete both the internal data?</string>
    <string name="item_delete_both_deletion">Both deletion</string>
    <string name="item_delete_internal_only">Internal only</string>
    <string name="item_delete_sdcard_notfound">External Memory (SD) SD card is not found in non-terminal, remove only the internal data. Are you sure?</string>
    <string name="item_delete_confirm_clip_and_photo_extend_data_msg">Do you want to remove both the internal data, images and Web clips that are stored in extended memory?</string>
    <string name="item_delete_confirm_clip_extend_data_msg">Do you want to remove both the Web clip and internal data that are stored in extended memory?</string>
    <string name="item_delete_confirm_photo_extend_data_msg">Do you want to remove both the internal data and images saved in the extended memory?</string>
    <string name="item_delete_alltype_result">Memo and Image memo, ToDo, Web clip has been selected has been deleted</string>
	<string name="item_delete_memo_and_image_and_clip_result">Memo and Image memo, Web clip has been selected has been deleted</string>
	<string name="item_delete_memo_and_image_and_todo_result">Memo and Image memo, ToDo has been selected has been deleted</string>
	<string name="item_delete_memo_and_todo_and_clip_result">Memo and ToDo, Web clip has been selected has been deleted</string>
	<string name="item_delete_image_and_todo_and_clip_result">Image memo and ToDo, Web clip has been selected has been deleted</string>
    <string name="item_delete_memo_and_todo_result">Memo and ToDo has been selected has been deleted</string>
    <string name="item_delete_memo_and_image_result">Memo and Image memo has been selected has been deleted</string>
    <string name="item_delete_memo_and_clip_result">Memo and Web clip has been selected has been deleted</string>
    <string name="item_delete_todo_and_image_result">ToDo and Image memo has been selected has been deleted</string>
    <string name="item_delete_todo_and_clip_result">ToDo and Web clip has been selected has been deleted</string>
	<string name="item_delete_image_and_clip_result">Image memo and Web clip has been selected has been deleted</string>
	<string name="item_delete_memo_result">Memo has been selected has been deleted</string>
	<string name="item_delete_todo_result">ToDo has been selected has been deleted</string>
	<string name="item_delete_image_result">Image memo has been selected has been deleted</string>
	<string name="item_delete_clip_result">Web clip has been selected has been deleted</string>
	<string name="clip_textshare">"Extracting Text ..."</string>
	<string name="clip_savehtmlbutton_description">save\n(HTML)</string>
	<string name="clip_savepicbutton_description">save\n(pic)</string>
	<string name="todo_limit_description">deadline</string>
    <string name="err_activity_not_found">Application sharing could not be found</string>
	<string name="err_url_not_found">Web Clips to cancel because the URL is not specified</string>
	<string name="err_pic_not_found">The image memo cancel the registration because it could not get a picture taken</string>
	<string name="cancel_intent_camera">image memo registration has been aborted</string>
	<string name="err_cameraactivity_not_found">Could not find the camera application can be launched</string>
	<string name="err_preview_clip_not_found">Found a Web page saved in %1$s</string>
	<string name="err_preview_pic_not_found_head">File not found</string>
	<string name="err_preview_pic_not_found_foot">Image</string>
	<string name="err_external_storage">Extended memory (SD internal or external) were not recognized</string>
	<string name="preview_html_fullscreen">Back Key (Back button) \nto go back in</string>
	<string name="viewer_all_label">All</string>
	<string name="viewer_clip_label">Clip</string>
	<string name="viewer_memo_label">Memo</string>
	<string name="viewer_todo_label">ToDo</string>
	<string name="viewer_pic_label">Image</string>
	<string name="shortcut_not_coutent">Content Not Found</string>
	<string name="progress_readtags">Tags in Reading ...</string>
	<string name="dialog_ok">OK</string>
	<string name="dialog_yes">yes</string>
	<string name="dialog_no">no</string>
	<string name="memo_nontitle">Untitled memo</string>
	<string name="memo_nontitle_nonbody">Please enter a title or text</string>
	<string name="photo_nontitle">Untitled image memo</string>
	<string name="todo_limit_format">\'deadline \'yyyy\'/\'M\'/\'d</string>
	<string name="todo_item_limit_format">M\'/\'d</string>
	<string name="todo_nonlimit_description">no deadline</string>
	<string name="todo_nonschedule">ToDo will not be registered is empty</string>
	<string name="todo_separator_title_nonlimit">no deadline</string>
	<string name="todo_separator_title_expiration">Past deadline</string>
	<string name="todo_separator_title_future">Future</string>
	<string name="todo_separator_title_next7days">Next 7 days</string>
	<string name="todo_separator_title_tomorrow">Tomorrow</string>
	<string name="todo_separator_title_today">Today</string>
	<string name="clip_nontitle">Untitled Clip</string>
	<string name="progress_clip">Preparing Clips ...</string>
	<string name="clip_service_notify_activity_title">Web Clip Progress</string>
	<string name="clip_service_start_title">Began to save DreamNote</string>
	<string name="clip_service_progress_title">Saving to DreamNote</string>
	<string name="clip_service_complete_title">Done to save DreamNote</string>
	<string name="viewer_create_shortcut">Create shortcuts</string>
	<string name="viewer_recreate_thumbnail">recreate thumbnail</string>
	<string name="prefs_splashskip_description">Skip app splash screen</string>
	<string name="prefs_largethumbnail_description">Large Thumbnail</string>
	<string name="prefs_javascript_description">JavaScript running in the Web Clips</string>
	<string name="prefs_webpic_force_description">Internal data when saving images is not stored in the Web Clips</string>
	<string name="prefs_cliprecovery">Web Clips to re-register the unregistered internal data</string>
	<string name="menu_search_description">Search</string>
	<string name="menu_addnote_description">Add Note</string>
	<string name="menu_listsort_description">Sort</string>
	<string name="menu_listsort_create_asc_description">▲Added</string>
	<string name="menu_listsort_create_desc_description">▼Added</string>
	<string name="menu_listsort_date_asc_description">▲Updated</string>
	<string name="menu_listsort_date_desc_description">▼Updated</string>
	<string name="menu_listsort_title_asc_description">▲Title</string>
	<string name="menu_listsort_title_desc_description">▼Title</string>
	<string name="menu_listsort_todo_description">ToDo Standard</string>
	<string name="menu_javascript_run_description">javascript enable</string>
</resources>