<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_menu_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/menu_search_description"
        android:showAsAction="always|collapseActionView"
        android:actionViewClass="com.kaznog.android.dreamnote.widget.SearchView"
    />
    <item
        android:id="@+id/action_menu_select_tags"
        android:icon="@drawable/ic_menu_tag"
        android:title="@string/tagselector_description"
        android:showAsAction="always"
        android:actionViewClass="com.kaznog.android.dreamnote.widget.TagSelectorView"
    />
    <item
        android:id="@+id/action_menu_listsort"
        android:icon="@drawable/ic_menu_sort_by_size"
        android:title="@string/menu_listsort_description"
        android:showAsAction="always"
    >
    	<menu>
    	    <group
    	        android:id="@+id/action_submenu_listsort"
    	        android:checkableBehavior="single"
    	    >
    	        <item
    	            android:id="@+id/action_menu_listsort_create_asc"
    	            android:title="@string/menu_listsort_create_asc_description"
    	        />
    	        <item
    	            android:id="@+id/action_menu_listsort_create_desc"
    	            android:title="@string/menu_listsort_create_desc_description"
    	        />
    	        <item
    	            android:id="@+id/action_menu_listsort_date_asc"
    	            android:title="@string/menu_listsort_date_asc_description"
    	        />
    	        <item
    	            android:id="@+id/action_menu_listsort_date_desc"
    	            android:title="@string/menu_listsort_date_desc_description"
    	            android:checked="true"
    	        />
    	        <item
    	            android:id="@+id/action_menu_listsort_title_asc"
    	            android:title="@string/menu_listsort_title_asc_description"
    	        />
    	        <item
    	            android:id="@+id/action_menu_listsort_title_desc"
    	            android:title="@string/menu_listsort_title_desc_description"
    	        />
    	        <item
    	            android:id="@+id/action_menu_listsort_todo"
    	            android:title="@string/menu_listsort_todo_description"
    	            android:visible="false"
    	        />
    	    </group>
    	</menu>
    </item>
    <item
	    android:id="@+id/action_menu_addnote"
	    android:icon="@drawable/ic_menu_btn_add"
	    android:title="@string/menu_addnote_description"
	    android:showAsAction="always"
	>
		<menu>
		    <group
		        android:id="@+id/action_submenu_addnote"
		        android:checkableBehavior="none"
		    >
		        <item
		            android:id="@+id/action_menu_addmemo"
		            android:title="@string/addmemo_title"
		            android:icon="@drawable/notebook"
		        />
		        <item
		            android:id="@+id/action_menu_addphoto"
		            android:title="@string/addphoto_title"
		            android:icon="@drawable/camera"
		        />
		        <item
		            android:id="@+id/action_menu_addtodo"
		            android:title="@string/addtodo_title"
		            android:icon="@drawable/notepad"
		        />
		    </group>
		</menu>
	</item>
</menu>