<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/pre_menu_frag_del"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete_button_description"
        android:showAsAction="always"
    />
    <item
	    android:id="@+id/pre_menu_frag_share"
	    android:icon="@drawable/ic_menu_share"
	    android:title="@string/sharebutton_description"
	    android:showAsAction="always"
	/>
	<item
	    android:id="@+id/pre_menu_frag_ever"
	    android:icon="@drawable/ic_menu_evernote"
        android:showAsAction="always"
	    android:title="@string/post_evernote"
	/>
    <item
	    android:id="@+id/pre_menu_frag_fullscreen"
	    android:icon="@drawable/ic_media_fullscreen"
	    android:showAsAction="always"
	    android:title="@string/fullscreenbutton_description"
	/>
	<item
	    android:id="@+id/pre_menu_frag_browser"
	    android:icon="@drawable/ic_menu_globe"
        android:showAsAction="always"
	    android:title="@string/browserbutton_description"
	/>
	<item
	    android:id="@+id/pre_menu_frag_javascript"
	    android:icon="@drawable/ic_menu_javascript_run"
	    android:showAsAction="always"
	    android:title="@string/menu_javascript_run_description"
	/>
	<item
	    android:id="@+id/pre_menu_frag_edit"
	    android:icon="@drawable/ic_menu_edit"
	    android:title="@string/editbutton_description"
	    android:showAsAction="always"
	/>
	<item
	    android:id="@+id/pre_menu_frag_viewswitch"
	    android:icon="@drawable/ic_menu_up"
	    android:showAsAction="always"
	    android:title="@string/viewswitchbutton_description"
	/>
</menu>