<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/actionmode_delete"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete_button_description"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/actionmode_evernote"
        android:icon="@drawable/ic_menu_evernote"
        android:title="@string/post_evernote"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/actionmode_complete"
        android:icon="@drawable/btn_check_on_disabled_holo_light"
        android:title="@string/completebutton_description"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/actionmode_toincomplete"
        android:icon="@drawable/btn_check_off_disabled_holo_light"
        android:title="@string/incompletebutton_description"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/actionmode_shortcut"
        android:icon="@drawable/ic_menu_shortcut"
        android:title="@string/viewer_create_shortcut"
        android:showAsAction="always"
    />
</menu>