<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/calendar_frame"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:gravity="center_horizontal"
	android:background="#FFFFFFFF"
>
	<TableLayout
		android:id="@+id/calendar_table"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView
				android:id="@+id/calendar_month"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_span="5"
				android:gravity="left"
				android:textSize="24px"
				android:textStyle="bold"
			/>
			<TextView
				android:id="@+id/calendar_year"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_span="2"
				android:gravity="right"
				android:textSize="24px"
				android:textStyle="bold"
			/>
		</TableRow>
		<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView
				android:id="@+id/sunday_label"
				android:text="@string/sunday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="20px"
				android:textStyle="bold"
				android:background="@drawable/cal_header_sunday_cell"
			/>
			<TextView
				android:id="@+id/monday_label"
				android:text="@string/monday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="20px"
				android:textStyle="bold"
				android:background="@drawable/cal_header_default_cell"
			/>
			<TextView
				android:id="@+id/tuesday_label"
				android:text="@string/tuesday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="20px"
				android:textStyle="bold"
				android:background="@drawable/cal_header_default_cell"
			/>
			<TextView
				android:id="@+id/wednesday_label"
				android:text="@string/wednesday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="20px"
				android:textStyle="bold"
				android:background="@drawable/cal_header_default_cell"
			/>
			<TextView
				android:id="@+id/thursday_label"
				android:text="@string/thursday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="20px"
				android:textStyle="bold"
				android:background="@drawable/cal_header_default_cell"
			/>
			<TextView
				android:id="@+id/friday_label"
				android:text="@string/friday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="20px"
				android:textStyle="bold"
				android:background="@drawable/cal_header_default_cell"
			/>
			<TextView
				android:id="@+id/saturday_label"
				android:text="@string/saturday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="20px"
				android:textStyle="bold"
				android:background="@drawable/cal_header_saturday_cell"
			/>
		</TableRow>
	</TableLayout>
</LinearLayout>
