<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/actionmode_delete"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete_button_description"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/actionmode_evernote"
        android:icon="@drawable/ic_menu_evernote"
        android:title="@string/post_evernote"
        android:showAsAction="always"
    >
		<menu>
		    <group
		        android:id="@+id/actionmode_evernote_subgroup"
		        android:checkableBehavior="none"
		    >
		        <item
		            android:id="@+id/actionmode_evernote_simple"
		            android:icon="@drawable/ic_menu_evernote"
		            android:title="simple"
		        />
		        <item
		            android:id="@+id/actionmode_evernote_style"
		            android:icon="@drawable/ic_menu_evernote"
		            android:title="style"
		        />
		    </group>
		</menu>
    </item>
    <item
        android:id="@+id/actionmode_refresh_thumbnail"
        android:icon="@drawable/ic_menu_refresh_thumbnail"
        android:title="@string/viewer_recreate_thumbnail"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/actionmode_shortcut"
        android:icon="@drawable/ic_menu_shortcut"
        android:title="@string/viewer_create_shortcut"
        android:showAsAction="always"
    />
</menu>