<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
>
	<LinearLayout
		android:id="@+id/memo_edit_top"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
	>
		<com.kaznog.android.dreamnote.widget.DreamNoteTitleEditText
		    style="@android:style/TextAppearance.Large"
			android:text=""
			android:hint="@string/hint_title"
			android:id="@+id/memo_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:lines="1"
			android:inputType="text"
			android:imeOptions="flagNoAccessoryAction"
		/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/memo_edit_bottom"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
	>
		<Button
		    style="@android:style/TextAppearance.Medium"
			android:id="@+id/todo_selectdate"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/seldatebutton_description"
		/>
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		>
			<ImageButton
			    style="@android:style/TextAppearance.Medium"
			    android:id="@+id/TagSelButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_menu_tag"
				android:layout_alignParentRight="true"
				android:contentDescription="@string/seltagbutton_description"
			/>
			<com.kaznog.android.dreamnote.widget.TagAutoCompleteTextView
			    style="@android:style/TextAppearance.Medium"
				android:id="@+id/MultiAutoCompleteTagText"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:hint="@string/hint_tags"
				android:completionThreshold="1"
				android:lines="1"
				android:inputType="text"
				android:imeOptions="flagNoAccessoryAction"
				android:layout_alignParentLeft="true"
				android:layout_toLeftOf="@id/TagSelButton"
			/>
		</RelativeLayout>
	</LinearLayout>
	<com.kaznog.android.dreamnote.widget.DreamNoteEditText
	    style="@android:style/TextAppearance.Medium"
		android:text=""
		android:hint="@string/hint_content"
		android:id="@+id/memo_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="top"
		android:layout_below="@+id/memo_edit_top"
		android:layout_above="@+id/memo_edit_bottom"
		android:inputType="textMultiLine"
		android:imeOptions="flagNoAccessoryAction"
	/>
</RelativeLayout>