<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<CheckedTextView
			android:text="@string/prefs_splashskip_description"
			android:id="@+id/pref_splash"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:textColor="#FF000000"
			style="@android:style/TextAppearance.Medium"
			android:checkMark="?android:attr/listChoiceIndicatorSingle"
			android:clickable="true"
			android:paddingLeft="30dip"
			android:paddingRight="30dip"
		/>
		<View
			android:layout_width="fill_parent"
			android:layout_height="2dp"
			android:background="#FFcccccc"
	    />
		<CheckedTextView
		    android:text="@string/prefs_largethumbnail_description"
		    android:id="@+id/pref_largethumbnail"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:textColor="#FF000000"
			style="@android:style/TextAppearance.Medium"
			android:checkMark="?android:attr/listChoiceIndicatorSingle"
			android:clickable="true"
			android:paddingLeft="30dip"
			android:paddingRight="30dip"
		/>
		<View
			android:layout_width="fill_parent"
			android:layout_height="2dp"
			android:background="#FFcccccc"
	    />
	    <CheckedTextView
	    	android:text="@string/prefs_javascript_description"
	    	android:id="@+id/pref_javascript"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center_vertical"
	    	android:textColor="#FF000000"
	    	style="@android:style/TextAppearance.Medium"
			android:checkMark="?android:attr/listChoiceIndicatorSingle"
			android:clickable="true"
			android:paddingLeft="30dip"
			android:paddingRight="30dip"
	    />
		<View
			android:layout_width="fill_parent"
			android:layout_height="2dp"
			android:background="#FFcccccc"
	    />
	    <CheckedTextView
	    	android:text="@string/prefs_webpic_force_description"
	    	android:id="@+id/pref_webpic_force"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center_vertical"
	    	android:textColor="#FF000000"
	    	style="@android:style/TextAppearance.Medium"
			android:checkMark="?android:attr/listChoiceIndicatorSingle"
			android:clickable="true"
			android:paddingLeft="30dip"
			android:paddingRight="30dip"
	    />
		<View
			android:layout_width="fill_parent"
			android:layout_height="2dp"
			android:background="#FFcccccc"
	    />
	    <Button
	    	android:id="@+id/pref_enconfig"
	    	android:text="@string/preference_enconfig_log_in"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:textColor="#FF000000"
	    	style="@android:style/TextAppearance.Medium"
	    	android:clickable="true"
	    />
		<View
			android:layout_width="fill_parent"
			android:layout_height="2dp"
			android:background="#FFcccccc"
	    />
	    <Button
	    	android:text="@string/prefs_cliprecovery"
	    	android:id="@+id/pref_cliprecovery"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:textColor="#FF000000"
	    	style="@android:style/TextAppearance.Medium"
	    	android:clickable="true"
	    />
	</LinearLayout>
</ScrollView>